--- a/index.html
+++ b/index.html
@@ -43,53 +43,135 @@
 </head>
 <body>
   <div class="container">
-    <svg
-      id="svg-stage"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="-1 -1 103 103"
-      fill="none"
-      stroke-width="2.2"
-      opacity="0"
-    >
-      <defs>
-        <linearGradient
-          id="grad-1"
-          x1="0" y1="0"
-          x2="100" y2="100"
-          gradientUnits="userSpaceOnUse"
-        >
-          <stop offset="0.2" stop-color="rgb(255, 135, 9)"></stop>
-          <stop offset="0.8" stop-color="rgb(247, 189, 248)"></stop>
-        </linearGradient>
-      </defs>
-      <path
-        stroke="url(#grad-1)"
-        d="M50.5 50.5h50v50s-19.2 1.3-37.2-16.7S56 35.4 35.5 15.5C18.5-1 .5.5.5.5v50h50s25.6-.6 38-18 12-32 12-32h-50v100H.5S.2 80.7 11.8 68.2 40 49.7 50.5 50.5Z"
-      />
-    </svg>
+<svg viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
+ <defs>
+  <pattern id="dragPattern" width="14"  height="24.5" x="0" y="0" patternUnits="userSpaceOnUse" viewBox="0 0 28 49">
+   <g fill-rule="evenodd"><g id="hexagons" fill-rule="nonzero" fill='#4DB5AE'><path d="M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z"/></g></g>
+
+
+   </pattern>  
+    <filter id="goo">
+      <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
+      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" result="cm" />
+      <feBlend/>
+  	</filter>   
+ </defs>
+      <path class="outlineBG" d="M400,121.5A178.5,178.5,0,1,1,221.5,300,178.5,178.5,0,0,1,400,121.5" fill="none" stroke="#4DB5AE" stroke-linecap="round" stroke-miterlimit="10" stroke-width="12" stroke-dasharray="0" opacity="0.05"/>
+ 
+ <g filter="url(#goo)">
+      <path class="outline" d="M400,121.5A178.5,178.5,0,1,1,221.5,300,178.5,178.5,0,0,1,400,121.5" fill="none" stroke="#81D6E3" stroke-miterlimit="10" stroke-width="12" />
+  <g class="dragger">
+      <circle class="dragCircle" cx="400" cy="121" r="22" fill="#B2DDF7" stroke="#000" stroke-width="10"/>
+
+  </g>
+ </g>
+
+ 
+<circle class="patternOverlay" cx="400" cy="121" r="26" fill="url(#dragPattern)"  stroke="none" stroke-width="0" opacity="1"/>
+ <g class="displayContainer">
+   <text class="display" x="400" y="301" opacity="1"></text>
+ </g>
+   <circle class="dialGrip" cx="400" cy="300" r="80" fill="transparent" stroke="#B2DDF7" stroke-width="45" stroke-dasharray="4 16 67" opacity="0.2"/>
+   <circle class="dialGrip" cx="400" cy="300" r="140" fill="transparent" stroke="#CAB9C7" stroke-width="15" stroke-dasharray="56 7 123 " opacity="0.14"/> 
+ <g class="dial">
+  
+
+   <circle class="dialCircle" cx="400" cy="300" r="223" fill="transparent"/>
+ </g>
+</svg>
   </div>
 
   <script>
-    window.addEventListener('load', () => {
-      // Register the plugin
-      gsap.registerPlugin(DrawSVGPlugin);
+    var xmlns = "http://www.w3.org/2000/svg",
+  xlinkns = "http://www.w3.org/1999/xlink",
+  select = function(s) {
+    return document.querySelector(s);
+  },
+  selectAll = function(s) {
+    return document.querySelectorAll(s);
+  },
+    outlineTip = select('.outlineTip'),
+    displayContainer = select('.displayContainer'),
+    dragPattern = select('#dragPattern'),
+    patternOverlay = select('.patternOverlay'),
+    display = select('.display'),
+    dial = select('.dial'),
+    dialGrip = selectAll('.dialGrip'),
+    outline = selectAll('.outline'),
+    dragger = select('.dragger'),
+    dialPos = TweenMax.set('.dial', {
+     x:'+=0'
+    }).target[0]._gsTransform
+  
 
-      const tl = gsap.timeline({
-        repeat: -1,
-        defaults: { duration: 3, ease: 'power1.inOut' }
-      });
+TweenMax.set('svg', {
+  visibility: 'visible'
+})
 
-      tl
-       .set('#svg-stage', { opacity: 1 })
-       .to('#svg-stage path', { 
-         strokeDashoffset: 0,
-         duration: 3
-       })
-       .to('#svg-stage path', { 
-         strokeDashoffset: -1000,
-         duration: 3
-       });
-    });
+var tl = new TimelineMax();
+TweenMax.set([dial, dragger, display, dialGrip], {
+ transformOrigin:'50% 50%'
+})
+
+TweenMax.set([displayContainer,dragger, patternOverlay], {
+ svgOrigin:'400 300'
+})
+
+Draggable.create(dial, {
+ type:'rotation',
+ bounds:{maxRotation:360, minRotation:0},
+ throwProps:true,
+ onDrag:dragUpdate,
+ dragResistance:0.1,
+ throwResistance:1,
+ overshootTolerance:0,
+ onThrowUpdate:dragUpdate
+})
+
+
+function dragUpdate(){
+ 
+ var percent = dialPos.rotation/360;
+ TweenMax.set([dragger, displayContainer, patternOverlay], {
+  rotation:dialPos.rotation
+ })
+ TweenMax.set(display, {
+  rotation:360-dialPos.rotation
+ })
+ 
+ TweenMax.staggerTo(dialGrip, 0.6, {
+  cycle:{
+   rotation:function(i){
+    return (i==0) ? -dialPos.rotation : dialPos.rotation*2
+   }
+  }
+ },0)
+ 
+ 
+ var draw = '0% ' + (percent*100) + '%';
+ TweenMax.set([outline, outlineTip], {
+  drawSVG: draw
+ })
+ 
+ TweenMax.to(dragPattern, 1, {
+  attr:{
+   x:Math.round(percent * 1000),
+   ease:Sine.easeOut
+  }
+ })
+ TweenMax.to(dragPattern,0.5, {
+  attr:{   
+   y:Math.round(percent * 1000),
+   ease:Sine.easeOut
+  }
+ })
+ 
+ display.textContent = Math.round(percent * 100);
+}
+
+dragUpdate();
+//ScrubGSAPTimeline(tl);
+
   </script>
 </body>
 </html>
