--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="p-8">
+<body class="p-8 bg-[#0D0D0D]">
   <!-- Container for image and overlays -->
-  <div class="relative inline-block">
+  <div class="relative items-center top-10 inline-block">
     <!-- User-provided image -->
-    <img src="lbox.png" alt="Team design image" class="block" />
+    <img src="lbox.png" alt="Team design image" class="block w-250 h-250 md:w-[360px] md:h-[240px]"/>
 
     <!-- Animated arrow icon (top-left, bouncing) -->
     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="absolute top-2 left-2 h-8 w-8 text-white animate-bounce" viewBox="0 0 16 16">
