--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           
           <!-- bottom-right arrow -->
           <svg xmlns="http://www.w3.org/2000/svg"
-               class="absolute bottom-4 right-4 h-8 w-8 text-white animate-pulse transform rotate-180"
+               class="absolute bottom-4 right-4 h-8 w-8 text-white animate-pulse animate-bounce transform rotate-180"
                fill="currentColor" viewBox="0 0 16 16">
             <path fill-rule="evenodd" 
                   d="M14 13.5a.5.5 0 0 1-.5.5h-6a.5.5 0 0 1 0-1h4.793L2.146 2.854a.5.5 
@@ -43,7 +43,7 @@
           <!-- overlay <span> to mimic & recolor/scale the word “Team” -->
           <span id="teamText"
                 class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2
-                       text-black text-4xl font-bold transition-all duration-200">
+                       text-black text-4xl font-bold transition-all duration-200 animate-pulse">
             Team
           </span>
         </div>
