--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     import * as THREE from 'https://cdn.skypack.dev/three@0.128.0';
 
     function Scene() {
-      const texture1 = useTexture('https://github.com/vinnaver8/svg/blob/main/lbox.png/500x500?text=Image+1');
-      const texture2 = useTexture('https://github.com/vinnaver8/svg/blob/main/lbox2.png/500x500?text=Image+2');
+      const texture1 = useTexture('https://github.com/vinnaver8/svg/main/lbox.png');
+      const texture2 = useTexture('https://github.com/vinnaver8/svg/main/lbox2.png');
 
       const plane1Ref = useRef();
       const plane2Ref = useRef();
