--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     import * as THREE from 'https://cdn.skypack.dev/three@0.128.0';
 
     function Scene() {
-      const texture1 = useTexture('https://raw.githubusercontent.com/vinnaver8/main/svg/lbox.png');
-      const texture2 = useTexture('https://raw.githubusercontent.com/vinnaver8/main/svg/lbox2.png');
+      const texture1 = useTexture('https://githubusercontent.com/vinnaver8/main/svg/lbox.png');
+      const texture2 = useTexture('https://githubusercontent.com/vinnaver8/main/svg/lbox2.png');
 
       const plane1Ref = useRef();
       const plane2Ref = useRef();
