--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3D Animation with Image Switch</title>
   <script type="module">
-    import React, { useRef } from 'https://cdn.skypack.dev/react@17.0.2';
+    import React, { useRef, Suspense } from 'https://cdn.skypack.dev/react@17.0.2';
     import ReactDOM from 'https://cdn.skypack.dev/react-dom@17.0.2';
     import { Canvas, useFrame } from 'https://cdn.skypack.dev/@react-three/fiber@7.0.24';
     import { useTexture } from 'https://cdn.skypack.dev/@react-three/drei@7.27.0';
     import * as THREE from 'https://cdn.skypack.dev/three@0.128.0';
 
     function Scene() {
-      const texture1 = useTexture('lbox.png');
-      const texture2 = useTexture('lbox2.png');
+      // Try absolute URLs to confirm if relative paths are the issue
+      const texture1 = useTexture('https://raw.githubusercontent.com/vinnaver8/svg/main/lbox.png');
+      const texture2 = useTexture('https://raw.githubusercontent.com/vinnaver8/svg/main/lbox2.png');
+
+      // Debug: Log to confirm textures are loaded
+      console.log('Texture 1 loaded:', texture1);
+      console.log('Texture 2 loaded:', texture2);
 
       const plane1Ref = useRef();
       const plane2Ref = useRef();
@@ -60,8 +65,13 @@
 
     function App() {
       return (
-        <Canvas style={{ width: '100vw', height: '100vh' }}>
-          <Scene />
+        <Canvas
+          style={{ width: '100vw', height: '100vh' }}
+          camera={{ position: [0, 0, 5], fov: 75 }} // Explicitly set camera position
+        >
+          <Suspense fallback={<mesh><boxGeometry args={[1, 1, 1]} /><meshBasicMaterial color="blue" /></mesh>}>
+            <Scene />
+          </Suspense>
         </Canvas>
       );
     }
