--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
   </script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <div id="root"></div>
+  <div id="root" class="bg-[#0D0D0D]"></div>
 </body>
 </html>
