--- a/index.html
+++ b/index.html
@@ -5,49 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3D Animation with Black Background</title>
   <script type="module">
-    import React, { useRef } from 'https://esm.sh/react@19.1.0';
-    import { createRoot } from 'https://esm.sh/react-dom@19.1.0/client';
-    import { Canvas, useFrame } from 'https://esm.sh/@react-three/fiber@9.1.2';
-    import * as THREE from 'https://esm.sh/three@0.176.0';
+    import React, { useRef, useEffect } from 'https://esm.sh/react@18.2.0';
+    import { createRoot } from 'https://esm.sh/react-dom@18.2.0/client';
+    import { Canvas, useFrame } from 'https://esm.sh/@react-three/fiber@8.13.5';
+    import * as THREE from 'https://esm.sh/three@0.152.2';
 
     function Scene() {
       const cubeRef = useRef();
 
       useFrame(() => {
-        cubeRef.current.rotation.x += 0.01;
-        cubeRef.current.rotation.y += 0.01;
+        if (cubeRef.current) {
+          cubeRef.current.rotation.x += 0.01;
+          cubeRef.current.rotation.y += 0.01;
+        }
       });
 
-      return (
-        <mesh ref={cubeRef} position={[0, 0, 0]}>
-          <boxGeometry args={[1, 1, 1]} />
-          <meshBasicMaterial color="green" />
-        </mesh>
+      return React.createElement(
+        'mesh',
+        { ref: cubeRef, position: [0, 0, 0] },
+        React.createElement('boxGeometry', { args: [1, 1, 1] }),
+        React.createElement('meshBasicMaterial', { color: 'green' })
       );
     }
 
     function App() {
-      return (
-        <>
-          <div style={{ position: 'absolute', top: '10px', left: '10px', color: 'white' }}>
-            Loading 3D Scene...
-          </div>
-          <Canvas
-            style={{ width: '100vw', height: '100vh' }}
-            camera={{ position: [0, 0, 5], fov: 75 }}
-          >
-            <Scene />
-          </Canvas>
-        </>
+      return React.createElement(
+        React.Fragment,
+        null,
+        React.createElement('div', {
+          style: {
+            position: 'absolute',
+            top: '10px',
+            left: '10px',
+            color: 'white',
+            zIndex: 10
+          }
+        }, 'Loading 3D Scene...'),
+        React.createElement(Canvas, {
+          style: { width: '100vw', height: '100vh' },
+          camera: { position: [0, 0, 5], fov: 75 }
+        }, React.createElement(Scene))
       );
     }
 
-    const rootElement = document.getElementById('root');
-    const root = createRoot(rootElement);
-    root.render(<App />);
+    const root = createRoot(document.getElementById('root'));
+    root.render(React.createElement(App));
   </script>
 </head>
-<body style="margin: 0; overflow: hidden; background-color: #0D0D0D;">
+<body style="margin: 0; overflow: hidden; background: black;">
   <div id="root"></div>
 </body>
 </html>
