--- a/index.html
+++ b/index.html
@@ -2,57 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>3D Animation with Black Background</title>
-  <script type="module">
-    import React, { useRef, useEffect } from 'https://esm.sh/react@18.2.0';
-    import { createRoot } from 'https://esm.sh/react-dom@18.2.0/client';
-    import { Canvas, useFrame } from 'https://esm.sh/@react-three/fiber@8.13.5';
-    import * as THREE from 'https://esm.sh/three@0.152.2';
-
-    function Scene() {
-      const cubeRef = useRef();
-
-      useFrame(() => {
-        if (cubeRef.current) {
-          cubeRef.current.rotation.x += 0.01;
-          cubeRef.current.rotation.y += 0.01;
-        }
-      });
-
-      return React.createElement(
-        'mesh',
-        { ref: cubeRef, position: [0, 0, 0] },
-        React.createElement('boxGeometry', { args: [1, 1, 1] }),
-        React.createElement('meshBasicMaterial', { color: 'green' })
-      );
-    }
-
-    function App() {
-      return React.createElement(
-        React.Fragment,
-        null,
-        React.createElement('div', {
-          style: {
-            position: 'absolute',
-            top: '10px',
-            left: '10px',
-            color: 'white',
-            zIndex: 10
-          }
-        }, 'Loading 3D Scene...'),
-        React.createElement(Canvas, {
-          style: { width: '100vw', height: '100vh' },
-          camera: { position: [0, 0, 5], fov: 75 }
-        }, React.createElement(Scene))
-      );
-    }
-
-    const root = createRoot(document.getElementById('root'));
-    root.render(React.createElement(App));
-  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pure Three.js Cube</title>
+  <style>
+    body { margin: 0; overflow: hidden; background: black; }
+    canvas { display: block; }
+  </style>
 </head>
-<body style="margin: 0; overflow: hidden; background: black;">
-  <div id="root"></div>
+<body>
+  <script type="module">
+    import * as THREE from 'https://unpkg.com/three@0.152.2/build/three.module.js';
+
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const geometry = new THREE.BoxGeometry();
+    const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    camera.position.z = 5;
+
+    function animate() {
+      requestAnimationFrame(animate);
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
+      renderer.render(scene, camera);
+    }
+
+    animate();
+  </script>
 </body>
 </html>
